--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <a href="index.html">Home</a>
         </nav>
     </header>
-    <h1>Faz Site</h1>
+    <main>
+        <h1>Faz Site</h1>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
