--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
     <title>Git</title>
 </head>
 <body>
     <h1>Faz Site</h1>
+    <br>
+    <label for="nome">Digite seu nome</label>
+    <input type="text" id="nome">
+    <br>
+    <button id="graver">Gravar</button>
+    <br>
+    <br>
+    <div id="res_nome"></div>
 </body>
 </html>
